fix z-index of header

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -8,6 +8,7 @@
   height: 4.1rem;
   width: 80%;
   position: fixed;
+  z-index: 99;
   .logo {
     @include title;
     display: flex;
